--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
   <div class="section">
     <h1>ඔබගේ වාරය තවම නැවතීලා නෑ. අදහස් වීමට තවත් තත්පර කිහිපයකි!</h1>
     <a class="button" href="https://t.me/virat999bot" target="_blank">✉️ විරාත්ට ලියන්න</a>
-    <a class="button" href="https://affpa.top/L?tag=d_3713491m_29091c_&site=3713491&ad=29091&r=registration" target="_blank">🎮 ඇවියේටර් ක්‍රීඩාව</a>
+    <a class="button" href="https://reffpa.com/L?tag=d_3713491m_97c_&site=3713491&ad=97&r=registration" target="_blank">🎮 ඇවියේටර් ක්‍රීඩාව</a>
     <button class="button button-green" onclick="getSignal()">✅ සංඥා ලබාගන්න</button>
     <div id="signal-display"></div>
   </div>
@@ -117,7 +117,7 @@
     <br>
     <button id="id-confirm-btn" onclick="handleIdSubmit()">ID එක එක් කරන්න</button>
     <div id="balance-warning"></div>
-    <a id="deposit-btn" href="https://affpa.top/L?tag=d_3713491m_29091c_&site=3713491&ad=29091&r=registration" target="_blank" style="display:none">🤑 ගිණුමට මුදල් එක් කරන්න</a>
+    <a id="deposit-btn" href="https://reffpa.com/L?tag=d_3713491m_97c_&site=3713491&ad=97&r=registration" target="_blank" style="display:none">🤑 ගිණුමට මුදල් එක් කරන්න</a>
   </div>
 
   <div class="section">
